# swarm_ctrl_pkg

./: .gitignore  CMakeLists.txt  README.md  abc  package.xml  run_point  run_scen1  run_scenario_individually  scenario  scenario2
config/: README.md
config/posix-configs/SITL/: README.md
config/posix-configs/SITL/init/ekf2/: Link to iris_10 (3rd copy)  iitp_drone  iitp_drone11  iitp_drone_prev  iris_1  iris_10  iris_11  iris_12  iris_13  iris_14  iris_15  iris_16  iris_17  iris_18  iris_19  iris_2  iris_20  iris_21  iris_22  iris_23  iris_24  iris_25  iris_26  iris_27  iris_28  iris_29  iris_3  iris_30  iris_31  iris_32  iris_33  iris_34  iris_35  iris_36  iris_37  iris_38  iris_39  iris_4  iris_40  iris_41  (+14 more)
config/posix-configs/worlds/: empty_sky.world
config/swarm-configs/: config.yaml
config/tool-configs/: rviz_config.rviz
include/: Font7x5.h  Font8x8.h  mission.h  multi_header.h  pid.h  ros_msg_extension.h  scenario.h  scenario2.h  vehicle.h
launch/: 10_sitl_swarm_ctrl.launch  18_sitl_swarm_ctrl.launch  3_sitl_swarm_ctrl.launch  5_sitl_swarm_ctrl.launch  apm.launch  apm_setpoint.launch  apm_test.launch  config.yaml  control.launch  distributed_setpoint_ctrl.launch  iitp.launch  iitp_drone.launch  iitp_spawn.launch  iitp_test.launch  launch_yaml.launch  mavros_sitl_with_swarm_ctrl.launch  multi_launch.launch  multi_launch_2.launch  multi_launch_3.launch  multi_mavros.launch  multi_sim.launch  multi_sitl_ros.launch  multi_sitl_spawn.launch  multi_uav_mavros_sitl.launch  on_con_cen.launch  on_ras0.launch  on_ras1.launch  on_ras2.launch  on_ras3.launch  on_ras4.launch  on_rasberry.launch  px4_setpoint.launch  remote_mavros.launch  selfie.launch  single_mavros.launch  single_sitl_spawn.launch  swarm.launch  test.launch  test10.launch  test2.launch  (+20 more)
msg/: imageOffset.msg  msgState.msg
px4-configs/SITL/init/ekf2/: iris_0  iris_1  iris_2  iris_3  iris_4
px4-configs/SITL/init/lpe/: iris_2
px4-configs/fcu_config/: px4_config.yaml  px4_config_0.yaml  px4_config_2.yaml  px4_config_3.yaml  px4_config_4.yaml
px4-configs/models/iris/: iris_1.sdf  iris_3.sdf
src/: arming.cpp  cmd.cpp  cmd.cpp.autosave  control_node.cpp  landing.cpp  main.cpp  mission.cpp  mission_run.cpp  ros_msg_extension.cpp  scenario.cpp  selfie.cpp  set_home.cpp  set_point.cpp  set_pos_local.cpp  state.cpp  swarm.cpp  test.cpp  vehicle.cpp
srv/: srvGoToVehicle.srv  srvMultiArming.srv  srvMultiLanding.srv  srvMultiSetHome.srv  srvMultiSetPosLocal.srv  srvMultiSetRawLocal.srv  srvSetSwarmTarget.srv
